<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rela"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="365dp"
        android:layout_height="328dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:adjustViewBounds="false"
            android:contentDescription="@string/todo"
            android:cropToPadding="false" />

        <com.example.usb.MyCanvas
            android:id="@+id/myCanvas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent" />

    </FrameLayout>


    <Button
        android:id="@+id/LoadG"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginEnd="229dp"
        android:layout_marginRight="229dp"
        android:layout_marginBottom="15dp"
        android:text="@string/load_image"
        android:textStyle="bold" />

    <Button
        android:id="@+id/takeSc"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="205dp"
        android:layout_marginLeft="205dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="14dp"
        android:text="@string/take_screenshot"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/main_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="176dp"
        android:textAlignment="center"
        android:textColor="@android:color/transparent"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ToBlack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="321dp"
        android:layout_marginLeft="321dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="76dp"
        android:background="@android:color/background_dark"
        android:text="@string/toblack" />

    <Button
        android:id="@+id/ToRed"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="138dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/tored" />

    <Button
        android:id="@+id/ToWhite"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="97dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="104dp"
        android:background="@android:color/darker_gray"
        android:text="@string/towhite" />

    <Button
        android:id="@+id/ToYellow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="78dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/toyellow" />

    <Button
        android:id="@+id/ToGreen"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="214dp"
        android:layout_marginBottom="104dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/togreen" />

    <Button
        android:id="@+id/ToBlue"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="273dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="142dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/toblue" />

</RelativeLayout>