<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/com_facebook_messenger_blue"
    tools:context="com.example.usb.MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="176dp"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/zuckerberg" />

    <Button
        android:id="@+id/btn_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="21dp"
        android:fontFamily="@font/caveat_brush"
        android:text="@string/profile"
        android:textSize="36sp" />

    <Button
        android:id="@+id/btn_posts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/caveat_brush"
        android:text="@string/posts_feed"
        android:textSize="36sp" />

    <Button
        android:id="@+id/btn_fb_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="3dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/logout"
        android:textSize="24sp" />

    <Button
        android:id="@+id/draw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="96dp"
        android:fontFamily="@font/caveat_brush"
        android:text="@string/share_photo"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/com_smart_login_code"
        android:textSize="36sp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="176dp"
        android:layout_height="250dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="-243dp"
        android:background="@drawable/com_facebook_favicon_blue"
        android:visibility="visible">

    </FrameLayout>

    <Button
        android:id="@+id/backtotab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="11dp"
        android:fontFamily="@font/caveat_brush"
        android:text="BacktoTabs" />

</RelativeLayout>